# Cplus2ASP

./: Makefile.am  README.md  configure.ac
examples/benchmarks/ferryman-10-4/: ferryman-10-4-benchmark.cp
examples/benchmarks/hanoi-8-4/: hanoi-8-4-benchmark.cp
examples/cplus/nmct/: shooting
examples/lua/: bw-path.bc  simple-lua  simple-lua.cp
release/: README.md  install.sh
src/clingo3to4/: Makefile.am
src/clingo3to4/f2lp_wrapper/: Makefile  clingo3to4.cpp  clingo3to4.h  constants.h  domain.cpp  domain.h  f2lp_wrapper.cpp  main.cpp
src/cplus2asp/: Config.cpp  Config.h  Config.r2c  Makefile.am  configure.ac  cplus2asp.cpp  cplus2asp.r2c  utils.cpp  utils.h
src/cplus2asp.bin/: Configuration.h  FormulaPredicate.h  Translator.cpp  main.cpp
